--- a/index.html
+++ b/index.html
@@ -92,20 +92,17 @@
                 <div class="item">
                     <img src="index/img/hello2.png" alt="error" class="img-responsive center-block"
                          style="width: 100%;height: 200px;">
-                    <div class="carousel-caption">
-                    </div>
+                    <div class="carousel-caption"></div>
                 </div>
                 <div class="item active">
                     <img src="index/img/helloworld.png" alt="error" class="img-responsive center-block"
                          style="width: 100%;height: 200px;">
-                    <div class="carousel-caption">
-                    </div>
+                    <div class="carousel-caption"></div>
                 </div>
                 <div class="item">
                     <img src="index/img/hello1.png" alt="error" class="img-responsive center-block"
                          style="width: 100%;height: 200px;">
-                    <div class="carousel-caption">
-                    </div>
+                    <div class="carousel-caption"></div>
                 </div>
             </div>
             <!-- 圆点 -->
@@ -194,6 +191,16 @@
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="http://weibo.com/" class="btn btn-warning btn-circle"
+               style="background-image: url('index/img/weibo.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="https://mail.qq.com/" class="btn btn-warning btn-circle"
+               style="background-image: url('index/img/qqyouxiang.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="http://www.jd.com/" class="btn btn-danger btn-circle"
                style="background-image: url('index/img/jingdong.jpg');background-size: cover">
             </a>
@@ -203,7 +210,7 @@
                style="background-image: url('index/img/taobao.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group col-lg-offset-2">
             <a href="http://www.youku.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/youku.jpg');background-size: cover">
             </a>
@@ -213,24 +220,59 @@
                style="background-image: url('index/img/tengxunshipin.jpg');background-size: cover">
             </a>
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group  col-lg-offset-2">
-            <a href="http://www.douyu.com/" class="btn btn-warning btn-circle"
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="http://www.douyu.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/douyu.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.zhaikexueyuan.com/" class="btn btn-default btn-circle"
-               style="background-image: url('index/img/zhaikexueyuan.jpg');background-size: cover">
+            <a href="http://www.zhihu.com/" class="btn btn-primary btn-circle"
+               style="background-image: url('index/img/zhihu.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://weibo.com/" class="btn btn-default btn-circle"
-               style="background-image: url('index/img/weibo.jpg');background-size: cover">
+            <a href="http://www.ifeng.com/" class="btn btn-default btn-circle"
+               style="background-image: url('index/img/fenghuangxinwen.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://mail.qq.com/" class="btn btn-warning btn-circle"
-               style="background-image: url('index/img/qqyouxiang.jpg');background-size: cover">
+            <a href="http://xa.58.com/" class="btn btn-default btn-circle"
+               style="background-image: url('index/img/58.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="http://www.dianping.com/" class="btn btn-warning btn-circle"
+               style="background-image: url('index/img/dazhongdianping.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="http://www.ctrip.com" class="btn btn-primary btn-circle"
+               style="background-image: url('index/img/xiecheng.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group col-lg-offset-2">
+            <a href="https://www.huaweicloud.com/" class="btn btn-default btn-circle"
+               style="background-image: url('index/img/huaweiyun.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="https://www.cmbchina.com/" class="btn btn-danger btn-circle"
+               style="background-image: url('index/img/zhaoshangyinhang.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="http://www.linkedin.com/" class="btn btn-primary btn-circle"
+               style="background-image: url('index/img/lingying.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="http://www.zhipin.com/" class="btn btn-success btn-circle"
+               style="background-image: url('index/img/bosszhipin.jpg');background-size: cover">
+            </a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
+            <a href="https://www.imooc.com/" class="btn btn-danger btn-circle"
+               style="background-image: url('index/img/muke.jpg');background-size: cover">
             </a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
@@ -246,51 +288,6 @@
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
             <a href="https://github.com/" class="btn btn-default btn-circle"
                style="background-image: url('index/img/github.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.ifeng.com/" class="btn btn-default btn-circle"
-               style="background-image: url('index/img/fenghuangxinwen.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group  col-lg-offset-2">
-            <a href="http://xa.58.com/" class="btn btn-default btn-circle"
-               style="background-image: url('index/img/58.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.zhipin.com/" class="btn btn-success btn-circle"
-               style="background-image: url('index/img/bosszhipin.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.dianping.com/" class="btn btn-warning btn-circle"
-               style="background-image: url('index/img/dazhongdianping.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://www.huaweicloud.com/" class="btn btn-default btn-circle"
-               style="background-image: url('index/img/huaweiyun.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.linkedin.com/" class="btn btn-primary btn-circle"
-               style="background-image: url('index/img/lingying.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.ctrip.com" class="btn btn-primary btn-circle"
-               style="background-image: url('index/img/xiecheng.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="https://www.cmbchina.com/" class="btn btn-danger btn-circle"
-               style="background-image: url('index/img/zhaoshangyinhang.jpg');background-size: cover">
-            </a>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3 btn-group">
-            <a href="http://www.zhihu.com/" class="btn btn-primary btn-circle"
-               style="background-image: url('index/img/zhihu.jpg');background-size: cover">
             </a>
         </div>
     </div>
