--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         }
 
         /*应用按钮*/
+        .btn-group {
+            text-align: center/*!important*/;
+        }
         .btn-circle {
             width: 80px;
             height: 80px;
@@ -38,10 +41,8 @@
             padding: 30px 30px;
             font-size: 20px;
             opacity: 1.0;
-            margin-bottom: 15px;
-            margin-top: 15px;
-            margin-left: 15px;
-            margin-right: 15px;
+            margin: 15px auto;
+            float: none!important;
         }
 
         /*背景图片*/
