--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <!-- 图片 -->
             <div class="carousel-inner" role="listbox">
                 <div class="item">
-                    <img src="index/img/hello2.png" alt="error" class="img-responsive center-block"
+                    <img src="index/img/helloworld.png" alt="error" class="img-responsive center-block"
                          style="width: 100%;height: 200px;">
                     <div class="carousel-caption"></div>
                 </div>
@@ -101,7 +101,7 @@
                     <div class="carousel-caption"></div>
                 </div>
                 <div class="item">
-                    <img src="index/img/hello1.png" alt="error" class="img-responsive center-block"
+                    <img src="index/img/helloworld.png" alt="error" class="img-responsive center-block"
                          style="width: 100%;height: 200px;">
                     <div class="carousel-caption"></div>
                 </div>
