--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         /*背景图片*/
         body {
-            background-image: url("index/img/timg1.jpg");
+            background-image: url("index/img/space.jpg");
             background-attachment: fixed;
             background-size: 100% 100%;
         }
